--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,23 @@
-sudo: required
-dis: trusty
+sudo: false
 language: cpp
 compiler:
-  - gcc-4.8
+  - g++
+
+install:
+  - if [ "$CXX" = "g++" ]; then export CXXFLAGS="-std=c++11"; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
+  - if [ "$CXX" = "clang++" ]; then export CXXFLAGS="-std=c++11"; fi
+  - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.7
+      - llvm-toolchain-precise
+    packages:
+      - clang-3.7
+      - g++-5
+      - gcc-5
+
 script: make
