--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-sudo: false
+# Ubuntu 14.04 Trusty support
+sudo: required
+dist: trusty
 language: cpp
 compiler:
-  - g++
+  - gcc
 
 install:
   - if [ "$CXX" = "g++" ]; then export CXXFLAGS="-std=c++11"; fi
@@ -12,12 +14,15 @@ install:
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-3.7
-      - llvm-toolchain-precise
+    # add PPAs with more up-to-date toolchains
+    - ubuntu-toolchain-r-test
+    - llvm-toolchain-precise-3.6
     packages:
-      - clang-3.7
-      - g++-5
-      - gcc-5
+    # install toolchains
+    - gcc-5
+    - g++-5
+    - clang-3.6
+
+env: COMPILER=g++-4.9
 
 script: make
