--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,8 @@ addons:
 
 env: COMPILER=g++-4.9
 
+before_script:
+  - sudo apt-get update -qq
+  - sudo apt-get install libboost-dev
+
 script: make
