--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 sudo: required
 dist: trusty
 language: cpp
+cache: apt
 compiler:
   - gcc
 
@@ -21,6 +22,6 @@ env: COMPILER=g++-4.9
 
 before_script:
   - sudo apt-get update -qq
-  - sudo apt-get install libboost-dev
+  - sudo apt-get install libboost-dev -y
 
 script: make
