change parameter of Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 sudo: required
 dist: trusty
 language: cpp
-# cache: apt
+cache: apt
 compiler:
   - gcc
 
@@ -11,12 +11,13 @@ addons:
     sources:
     # add PPAs with more up-to-date toolchains
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.8
+    # - llvm-toolchain-precise-3.8
     packages:
     # install toolchains
     - gcc-5
     - g++-5
-    - clang-3.8
+    # - clang-3.8
+    - clang
 
 env: COMPILER=g++-4.9
 
