Enhance WASM support and update simulation features
- Added `serde_json` dependency for JSON handling in WASM.
- Implemented `WasmSimulator` struct with methods for simulation management.
- Updated `current_state` method in `Simulator` for better state retrieval.
- Modified `.gitignore` to include additional JSON test files.
- Updated `Makefile` to use C++14 standard.
- Revised TODO list to reflect current implementation status.

--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ rust/*_trajectory.csv
 rust/*_summary.json
 rust/test_result*
 rust/sample_result*
+rust/test_*.json
 
 # WebAssembly build artifacts
 rust/pkg/
