Add script to compare C++ and Rust CSV outputs
This script reads C++ and Rust generated CSV files containing simulation data,
calculates the root mean square error (RMSE) for various metrics, and compares
the maximum altitude and corresponding timestamps. It provides a command-line
interface for easy usage and outputs the results in a readable format.

--- a/rust/crates/cli/Cargo.toml
+++ b/rust/crates/cli/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "rlib"]
 openTsiolkovsky-core = { path = "../core" }
 clap = { version = "4.4", features = ["derive"] }
 thiserror = "1.0"
+csv = { workspace = true }
 wasm-bindgen = { version = "0.2", optional = true }
 js-sys = { version = "0.3", optional = true }
 web-sys = { version = "0.3", optional = true }
