--- a/rust/crates/web/Cargo.toml
+++ b/rust/crates/web/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 
 [dependencies]
 openTsiolkovsky-core = { path = "../core" }
-axum = "0.7"
+axum = { version = "0.7", features = ["macros", "multipart"] }
 tokio = { version = "1.0", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors"] }
