feat: add SimulationPanel component for running simulations
- Implemented SimulationPanel with options to run simulations from server path, JSON input, or uploaded files.
- Added sample configuration JSON for user reference.
- Integrated loading state and error handling for simulation execution.
- Provided radio buttons for selecting execution mode (API or WASM).

feat: implement WASM support for simulations

- Created wasm.ts for loading and running simulations using WASM.
- Added initWasm and runSimulationWasm functions to handle WASM module initialization and simulation execution.
- Included stepWasm function for stepping through the simulation.

chore: add TypeScript definitions for WASM module

- Added wasm-shim.d.ts to suppress TypeScript errors when WASM module is not built.

chore: configure Rust toolchain for WASM

- Added rust-toolchain.toml to specify Rust toolchain settings for stable channel and WASM target.

chore: configure Rust formatting settings

- Created rustfmt.toml with custom formatting options for Rust code.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,10 +5,12 @@
     "jsx": "react-jsx",
     "moduleResolution": "bundler",
     "strict": true,
+    "noEmit": true,
+    "skipLibCheck": true,
+    "lib": ["ES2020", "DOM"],
     "baseUrl": ".",
     "paths": {},
-    "types": ["vite/client"]
+    "types": ["vite/client", "react", "react-dom"]
   },
   "include": ["src"]
 }
-
