--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,19 +1,41 @@
-[workspace]
-resolver = "2"
-members = [
-    "crates/core",
-    "crates/cli",
-]
+[package]
+name = "openTsiolkovsky"
+version = "0.1.0"
+edition = "2021"
+description = "OpenTsiolkovsky rocket flight simulator with CLI and WASM support"
+license = "MIT"
 
-[workspace.dependencies]
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[[bin]]
+name = "openTsiolkovsky-cli"
+path = "src/main.rs"
+required-features = ["cli"]
+
+[dependencies]
+# Core dependencies
 nalgebra = { version = "0.32", features = ["serde-serialize"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 csv = "1.3"
-rayon = "1.7"
 thiserror = "1.0"
-approx = "0.5"
 
-[workspace.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
+# CLI dependencies
+clap = { version = "4.4", features = ["derive"], optional = true }
+
+# WASM dependencies
+wasm-bindgen = { version = "0.2", optional = true }
+js-sys = { version = "0.3", optional = true }
+web-sys = { version = "0.3", optional = true }
+console_error_panic_hook = { version = "0.1", optional = true }
+serde-wasm-bindgen = { version = "0.6", optional = true }
+
+[features]
+default = ["cli"]
+cli = ["clap"]
+wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "serde-wasm-bindgen"]
+
+[dev-dependencies]
+approx = "0.5"
+tempfile = "3.8"
