--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
-    "@types/three": "^0.159.0",
     "@vitejs/plugin-react": "^4.7.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
@@ -31,7 +30,6 @@
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.6.0",
-    "three": "^0.159.0"
+    "tailwind-merge": "^2.6.0"
   }
 }
