--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,10 +7,7 @@
     "strict": true,
     "noEmit": true,
     "skipLibCheck": true,
-    "lib": ["ES2020", "DOM"],
-    "baseUrl": ".",
-    "paths": {},
-    "types": ["vite/client", "react", "react-dom"]
+    "lib": ["ES2020", "DOM"]
   },
   "include": ["src"]
 }
