--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,18 +47,25 @@ jobs:
 
   frontend:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+      - name: Build WASM
+        run: |
+          wasm-pack build --target web --features wasm
+          cp pkg/*.js pkg/*.wasm pkg/*.d.ts frontend/src/wasm/
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
       - name: Install dependencies
         run: bun install
+        working-directory: frontend
       - name: Type check
         run: bunx tsc --noEmit
+        working-directory: frontend
       - name: Build
         run: bun run build
+        working-directory: frontend
 
