--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
   },
   "routes": [
     {
+      "src": "/assets/(.*)",
+      "headers": { "cache-control": "max-age=31536000" }
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
